...
              'assets/svg/logo.svg',
              width: 150,
              height: 150,
            ),
            const SizedBox(height: 40),
            GameButton(
              text: 'Играть',
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                      builder: (context) => DeckSelectionScreen(
                            user: FirebaseAuth.instance.currentUser,
...
                style: TextStyle(fontSize: 16, color: Colors.yellow),
                textAlign: TextAlign.center,
              ),
              const SizedBox(height: 40),
              Center(
                child: GameButton(
                  text: 'Выбрать колоду',
                  onPressed: () {
                    Navigator.pushReplacement(
                      context,
                      MaterialPageRoute(
                          builder: (context) =>
                              BlackjackGameScreen(user: user)),
...
