...
                    },
                  );
                },
              ),
            ),
            const SizedBox(height: 20),
            GameButton(text: 'Новая игра', onPressed: widget.onRestart),
            const SizedBox(height: 10),
            GameButton(
              text: 'В главное меню',
              onPressed: () {
                Navigator.pushAndRemoveUntil(
                  context,
...
